--- a/Quiz/Quiz.csproj
+++ b/Quiz/Quiz.csproj
@@ -63,10 +63,19 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramIntro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProgramIntro.Designer.cs">
+      <DependentUpon>ProgramIntro.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionBlock.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProgramIntro.resx">
+      <DependentUpon>ProgramIntro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
