I can not put back image . . .

--- a/Quiz/Quiz.csproj
+++ b/Quiz/Quiz.csproj
@@ -110,5 +110,8 @@
   <ItemGroup>
     <None Include="Resources\bluecorrect.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BackImage.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
