Some Problems fixed

--- a/Quiz/App.config
+++ b/Quiz/App.config
@@ -19,5 +19,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="UsermodelContainer" connectionString="metadata=res://*/Usermodel.csdl|res://*/Usermodel.ssdl|res://*/Usermodel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\Documents\Documents\Usersdatabase.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MyUserDataEntities" connectionString="metadata=res://*/UserModel.csdl|res://*/UserModel.ssdl|res://*/UserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MyUserData.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MyUserDataEntities1" connectionString="metadata=res://*/MyDatabaseUser.csdl|res://*/MyDatabaseUser.ssdl|res://*/MyDatabaseUser.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MyUserData.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
