--- a/Quiz/Quiz.csproj
+++ b/Quiz/Quiz.csproj
@@ -103,6 +103,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionBlock.cs" />
+    <Compile Include="ReadQuestionBlock.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
